# codecrafters-claude-code-c

./: CMakeLists.txt  README.md  vcpkg.json
.codecrafters/: run.sh
src/: claude_api.c  claude_api.h  main.c  tools.c  tools.h
